# nimbus

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  diff.txt  rename_dial.py  test.cpp
Source/: Main.cpp
Source/AudioEngine/: AudioClipNode.cpp  AudioClipNode.h  AudioDeviceManagerWrapper.cpp  AudioDeviceManagerWrapper.h  AudioGraph.cpp  AudioGraph.h  AudioRecorder.cpp  AudioRecorder.h  ComputerMidiController.cpp  ComputerMidiController.h  IAudioNode.h  ITransport.h  MidiClipNode.cpp  MidiClipNode.h  MidiRecorder.cpp  MidiRecorder.h  Mixer.cpp  Mixer.h  PlaybackEngine.cpp  PlaybackEngine.h  PluginNode.cpp  PluginNode.h  TestToneNode.cpp  TestToneNode.h  Track.cpp  Track.h  TrackSourceNode.cpp  TrackSourceNode.h  Transport.cpp  Transport.h
Source/AudioEngine/DiskStreaming/: AudioRingBuffer.h  DiskStreamer.cpp  DiskStreamer.h
Source/Concurrency/: LockFreeQueue.h
Source/Core/: NimbusEngine.cpp  NimbusEngine.h
Source/Core/Plugins/: IStockPlugin.h  StockPluginFactory.cpp  StockPluginFactory.h
Source/Core/Plugins/Stock/: ChorusPlugin.cpp  ChorusPlugin.h  CloudEQPlugin.cpp  CloudEQPlugin.h  CompressorPlugin.cpp  CompressorPlugin.h  DelayPlugin.cpp  DelayPlugin.h  FilterPlugin.cpp  FilterPlugin.h  GainPlugin.cpp  GainPlugin.h  MultibandCompressorPlugin.cpp  MultibandCompressorPlugin.h  PitchCorrectionPlugin.cpp  PitchCorrectionPlugin.h  ReverbPlugin.cpp  ReverbPlugin.h  StockPluginUI.h
Source/DSP/: DelayLine.cpp  DelayLine.h  GainNode.cpp  GainNode.h  LevelMeter.h
Source/DataModel/: AudioClip.cpp  AudioClip.h  Clip.h  MidiClip.cpp  MidiClip.h  Models.h  TimelineProject.cpp  TimelineProject.h
Source/PluginHost/: PluginManager.cpp  PluginManager.h
Source/UI/: MainWindow.cpp  MainWindow.h  PluginWindow.cpp  PluginWindow.h
Source/UI/DesignSystem/: Colors.h  Iconography.h  NimbusLookAndFeel.cpp  NimbusLookAndFeel.h  ThemeManager.h  Typography.h
Source/UI/DetailView/: AbletonWidgets.cpp  AbletonWidgets.h  AudioClipViewComponent.cpp  AudioClipViewComponent.h  ClipPropertiesComponent.cpp  ClipPropertiesComponent.h  ExpandableSection.h  NotesPanelComponent.cpp  NotesPanelComponent.h  PianoRollComponent.cpp  PianoRollComponent.h  PianoRollComponent_old.cpp  PianoRollTimelineComponent.cpp  PianoRollTimelineComponent.h
Source/UI/MainLayout/: BottomMixerComponent.cpp  BottomMixerComponent.h  ChannelStripComponent.cpp  ChannelStripComponent.h  DetailViewComponent.cpp  DetailViewComponent.h  DeviceChainComponent.cpp  DeviceChainComponent.h  MainBottomPanelWrapper.cpp  MainBottomPanelWrapper.h  SideBrowserComponent.cpp  SideBrowserComponent.h  TopToolbarComponent.cpp  TopToolbarComponent.h
Source/UI/Mixer/: GroupIndicatorComponent.cpp  GroupIndicatorComponent.h  MeteredFader.cpp  MeteredFader.h  MidiActivityMeter.cpp  MidiActivityMeter.h
Source/UI/Settings/: SettingsMenuComponent.cpp  SettingsMenuComponent.h
Source/UI/Timeline/: ClipComponent.cpp  ClipComponent.h  GroupTrackHeaderComponent.cpp  GroupTrackHeaderComponent.h  TimelineComponent.cpp  TimelineComponent.h  TrackHeaderComponent.cpp  TrackHeaderComponent.h  TrackLaneComponent.cpp  TrackLaneComponent.h
Tests/: CMakeLists.txt  Main.cpp
Tests/AudioEngine/: AudioGraphTests.cpp  AudioRingBufferTests.cpp  MixerTests.cpp
Tests/Concurrency/: LockFreeQueueTests.cpp
docs/: UI_Fixes_Session.md  architecture.md  audit.md  audit_2026_07_09.md  audit_2026_07_16.md  audit_2026_07_19.md  audit_2026_07_20.md  audit_2026_07_23.md  audit_23_July.md  audit_progress_2026_07_08.md  persistence.md  phase2_rework_audit.md  plugin-hosting.md  roadmap.md  signal-flow.md  threading-model.md  timeline_clip_editing_features.md  ui_audit_2026_07_17.md  ui_audit_2026_07_18.md  ui_component_styles.md  ui_design_system.md  v1_status_2026-06-18.md  v2_status_2026-06-25.md
